# teleticket

./: Dockerfile  LICENSE  README.md  alembic.ini  app.py  bot.py  pyproject.toml
db/: env.py
db/versions/: 8fce3f84fcab_base.py
infra/: docker-compose.yaml  nginx.conf
scr/core/: base.py  config.py  crud.py  db.py  schema.py  service.py  user.py  validation.py
scr/crud/: __init__.py  message.py  ticket.py
scr/models/: __init__.py  models.py  user.py
scr/routers/: __init__.py
scr/routers/api/: __init__.py
scr/routers/api/v1/: __init__.py  message.py  ticket.py  user.py
scr/routers/web/: __init__.py
scr/schemas/: message.py  ticket.py
scr/services/db_services/: __init__.py  message.py  ticket.py
scr/services/telegram/: bot.py  kb.py  messages_const.py  router.py
scr/validators/: __init__.py  ticket.py  user.py
